--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,3 +10,7 @@ set -g mouse on
 
 # 设置默认终端模式为 256color
 set -g default-terminal "screen-256color"
+
+# 设置默认 shell 为 zsh
+set -g default-shell ~/bin/zsh
+set -g default-command ~/bin/zsh
